<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btDiscoverPathFromDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Discover Pathways"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btNodesFromDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get paths between 2 points"
        tools:ignore="HardcodedText" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kelvin.campuspathways.DisplayActivity" />


</LinearLayout>